# Interviewee

./: .gitignore  CMakeLists.txt  run_cpp
cpp_utils/: CMakeLists.txt  header.h  utils.cpp  utils.h
cpp_utils/cpp_template/: test.cpp
docs/: cpp_techniques.md
leetcode/1197-minimum-knight-moves/: solution.h  solution.py
leetcode/124-binary-tree-maximum-path-sum/: explanation_cn.md  solution.h
leetcode/139-word-break/: main.hs
leetcode/146-lru-cache/: explanation_cn.md  solution.h  test.cpp
leetcode/1763-longest-nice-substring/: solution.h
leetcode/1944-number-of-visible-people-in-a-queue/: solution.h
leetcode/2069-walking-robot-simulation-ii/: solution.h  test.cpp
leetcode/2243-calculate-digit-sum-of-a-string/: solution.h
leetcode/227-basic-calculator-ii/: solution.h
leetcode/2303-calculate-amount-paid-in-taxes/: solution.h
leetcode/2466-count-ways-to-build-good-strings/: CMakeLists.txt  solution.h  solution.py  test.cpp  test.py
leetcode/253-meeting-rooms-ii/: solution.h
leetcode/2771-longest-non-decreasing-subarray-from-two-arrays/: explanation_cn.md  solution.h  test.cpp
leetcode/282-expression-add-operators/: solution.h  test.cpp
leetcode/290-word-pattern/: main.hs
leetcode/322-coin-change/: main.hs
leetcode/353-design-snake-game/: explanation.md  solution.h  test.cpp
leetcode/362-design-hit-counter/: solution.h  test.cpp
leetcode/380-insert-delete-getrandom-o1/: 380_test_case0.txt  380_test_case1.txt  solution.h
oa/: .gitignore
oa/binary_game/: main.cpp  (+1 more)
onsite/: JS_Stock_Exposure.md
scripts/: gen_leetcode_cpp.sh  run_cpp
(+57 files in other folders)
